--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
-    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.1.3",
@@ -27,7 +26,8 @@
     "react-dom": "^18",
     "react-youtube": "^10.1.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@prisma/client": "^5.19.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -39,6 +39,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prisma": "^5.19.1"
   }
 }
