--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
-    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.1.3",
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.1.9",
     "lucide-react": "^0.378.0",
+    "mongoose": "^8.0.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
